# AIfileMonitoringSystem

./: LICENSE  README.md  pyproject.toml
examples/: config.local.json  rules.futures.json  sample_futures.csv
src/aifilemonitoring/: __init__.py  adaptive.py  adaptive_agent.py  agents.py  ai_validation.py  analytics.py  cli.py  llm.py  loaders.py  models.py  processor.py  rules.py  watcher.py
tests/: test_adaptive.py  test_adaptive_agent.py  test_ai_validation.py  test_processor.py  test_rules.py
